--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4000
 MONGODB_URI='mongodb+srv://connerpmcguire:nx5a%40ab%26Jdsi1JkYcc@dnd-cluster.ocozplc.mongodb.net/dnd-database?retryWrites=true&w=majority'
+SECRET=sJzK^1LxTnDf9GhPqE@2cW8pY6vRm
